# protocol

./: .gitignore  Anchor.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  JUDGE_RUNBOOK.md  README.md  RELEASE.md  SUBMISSION.md  SUMMARY.md  docker-compose.yml  eslint.config.mjs  libprobe.rlib  package-lock.json  package.json  render.yaml  rust-toolchain.toml  tsconfig.json
.cargo/: audit.toml
.claude/: settings.json  settings.local.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/helpers/: auto-commit.sh
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  allowed-signers  dependabot.yml  trufflehog-exclude.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: adr-lint.yml  ci.yml  event-coverage.yml  mainnet-readiness.yml  npm-publish.yml  publish.yml  shellcheck.yml  vercel-deploy-dashboard.yml  vercel-deploy-docs.yml  vercel-deploy-mcp.yml  vercel-deploy-site.yml
.kiro/: README.md
agentcore/: README.md  pyproject.toml
agentcore/src/agentcore/: __init__.py  agent_loop.py  gateway.py  identity.py  identity_aws.py  memory.py  memory_aws.py  nova_browser.py  prompts.py  sse.py  types.py
agentcore/tests/: conftest.py  test_agent_loop.py  test_identity_aws.py  test_memory_aws.py
config/: AUDIT_REPORT_HASHES
dashboard/: .env.example  index.html  package.json  vercel.json  vite.config.js
dashboard/public/: 404.html
dashboard/src/: AEAPDashboard.jsx  App.jsx  config.js  main.jsx
docs/: ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_DEEP_CRITIQUE.md  ARCHITECTURE_REAUDIT_2026-04.md  ARCHITECTURE_REAUDIT_2026-05.md  ARCHITECTURE_REAUDIT_2026-05b-runtime-validation.md  AUDIT_SCOPE.md  DEVNET_FAUCETS.md  INCIDENT_RESPONSE.md  KEY_MANAGEMENT.md  MAINNET_CHECKLIST.md  MAINNET_DEPLOY_RUNBOOK.md  MEMORY.md  PRE_MAINNET_ROADMAP.md  PROTOCOL_AUTHORITY_OPERATIONS.md  SDK_PUBLISH.md  SECURITY_AUDIT.md  SENDAIFUN_ECOSYSTEM_ANALYSIS.md  SMOKE_TESTING.md  SOLANA_ECOSYSTEM_ANALYSIS.md  SQUADS_DEVNET.md  STATUS.md  VIDEO_3MIN_BEATS.md  VIDEO_SCRIPTS.md  WEB3_V2_MIGRATION.md  aep-reflex-tech-spec.md  api-reference.md  autonomous-session-2026-05-14.md  decisionbranches.md  getting-started.md  index.md  integration-guide.md  package.json
docs/.vitepress/: config.ts
docs/adr/: ADR-001-cpi-caller-verification.md  ADR-002-settlement-anchor-constraints.md  ADR-003-spl-token-transfers.md  ADR-004-discover-agents-memcmp.md  ADR-005-input-validation-consistency.md  ADR-006-allowlist-size-caps.md  ADR-007-settlement-cpi-pattern.md  ADR-008-rust-unit-tests.md  ADR-009-edge-case-integration-tests.md  ADR-010-repo-cleanup.md  ADR-011-devnet-deployment.md  ADR-012-web3js-v2-migration.md  ADR-013-anchor-031-upgrade.md  ADR-014-cpi-discriminator-verification.md  ADR-015-token-daily-limits.md  ADR-016-off-chain-event-indexer.md  ADR-017-x402-http-payment-relay.md  ADR-018-framework-integrations.md  ADR-019-security-audit-preparation.md  ADR-020-reputation-staking.md  ADR-021-fuzz-testing.md  ADR-022-load-test-discovery.md  ADR-023-devnet-escrow-lifecycle.md  ADR-024-scoped-cpi-restrictions.md  ADR-025-expire-escrow-approved-milestones.md  ADR-026-resolve-dispute-bookkeeping.md  ADR-027-mcp-devnet-npm-packages.md  ADR-028-anti-sybil-defense.md  ADR-029-remove-vestigial-vault-account.md  ADR-030-dispute-timeout.md  ADR-031-mainnet-deployment.md  (+126 more)
examples/: README.md  package.json  register-agent.ts  tsconfig.json
fuzz/: .gitignore  Cargo.toml  README.md
idl/: .gitkeep  agent_registry.json  agent_vault.json  cctp_hook.json  settlement.json
integrations/: INTEGRATION_RESEARCH.md
load/: .gitignore  README.md  package.json  tsconfig.json
logs/: .gitkeep
mcp-server/: .dockerignore  .env.devnet  .env.example  .eslintrc.json  .gitignore  .vercelignore  ARCHITECTURE.md  Dockerfile  FILE_MANIFEST.md  INDEX.md  PROJECT_SUMMARY.txt  README.md  SETUP.md  fly.toml  package.json  railway.toml  tsconfig.json  tsconfig.test.json  vercel.json
migrations/: deploy.ts
mobile/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
programs/agent-registry/: Cargo.toml
programs/agent-registry/src/: contexts.rs  errors.rs  events.rs  lib.rs  state.rs
programs/agent-vault/: Cargo.toml
programs/agent-vault/src/: contexts.rs  errors.rs  events.rs  instructions.rs  lib.rs  state.rs
programs/cctp-hook/: Cargo.toml
programs/cctp-hook/src/: errors.rs  events.rs  lib.rs  payload.rs  state.rs
programs/settlement/: Cargo.toml
programs/settlement/src/: contexts.rs  errors.rs  events.rs  instructions.rs  lib.rs  state.rs
programs/settlement/src/instructions/: cpi.rs  dispute.rs  escrow.rs  mod.rs  protocol_config.rs
samples/: README.md
scripts/: .sas-ceremony-status.json  .sas-devnet.json  .squads-devnet.json  adr-lint.sh  audit-suspended-credential-attestations.ts  bootstrap-aep-validators-devnet.ts  bootstrap-sas-attestation-devnet.ts  bootstrap-sas-credential-devnet.ts  bootstrap-squads-devnet.ts  cargo-audit-baseline.json  cctp-relayer.ts  check-adr-refs.sh  check-doc-commands.sh  check-event-coverage.ts  check-idl.sh  check-license-parity.sh  check-mcp-transport-auth.sh  check-md-links.sh  check-program-ids.sh  check-tools-parity.sh  clippy-baseline.json  cost-report.sh  demo-e2e.ts  demo-mcp-vault.mjs  deploy-devnet.sh  emergency-suspend-credential.ts  flow-runner.ts  install-hooks.sh  load-test-discovery.ts  mainnet-deploy.sh  new-adr.sh  record-demo-video.sh  rotate-credential-authority.ts  run-sas-ceremony.sh  runner-precache-actions.sh  seed-runner-action-cache.sh  smoke-test-devnet.ts  status-audit.sh  stress-contention.ts  stress-inproc.ts  (+3 more)
site/: 404.html  app.js  fonts.css  index.html  styles.css  vercel.json
tests/: agent-registry.ts  agent-vault.ts  cctp-hook.ts  cpi-failures.test.ts  emergency-suspend-credential.test.ts  indexer-event-coverage.test.ts  indexer-handlers.test.ts  indexer.test.ts  settlement.ts  squads-bootstrap-config.test.ts  x402-relay.test.ts
(+342 files in other folders)
