[package]
name = "agent-registry"
version = "0.1.0"
edition = "2021"
description = "Agent Registry - Discovery and identity component for the Autonomous Economic Agents Protocol (AEAP) on Solana"

[dependencies]
anchor-lang = { version = "0.30", features = ["init-if-needed"] }
anchor-spl = { version = "0.30" }
solana-program = "1.18"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = 3

[profile.release.package."*"]
opt-level = 3
