[package]
name = "agent-registry"
version = "0.1.0"
edition = "2021"
description = "Agent Registry - Discovery and identity component for the Autonomous Economic Agents Protocol (AEAP) on Solana"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1" }

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Finding #17: Enables typed CPI generation from this program's `#[program]`
# module when consumed as a path dependency. Settlement depends on this with
# `features = ["cpi"]` so it can call `update_reputation` with compile-time
# type safety instead of a hard-coded discriminator byte array.
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dev-dependencies]
proptest = "1"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = 3

[profile.release.package."*"]
opt-level = 3
