[package]
name = "agent-registry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Agent Registry - Discovery and identity component for the Agent Economy Protocol (AEP) on Solana"

[dependencies]
# Pin Anchor versions exactly (=) for reproducible mainnet builds. A floating
# version means a future `cargo build` could pull a transitive that changes
# the program's bytecode hash, invalidating the audit. Per
# docs/MAINNET_CHECKLIST.md §1.1 #3.
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.31.1" }

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Finding #17 / AUD-001 / AUD-002: Enables typed CPI generation from this
# program's `#[program]` module when consumed as a path dependency. Settlement
# depends on this with `features = ["cpi"]` so it can call
# `propose_reputation_delta` with compile-time type safety instead of a
# hard-coded discriminator byte array.
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dev-dependencies]
proptest = "1"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = 3

[profile.release.package."*"]
opt-level = 3
