[package]
name = "agent-vault"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Pin Anchor versions exactly (=) for reproducible mainnet builds. A floating
# version means a future `cargo build` could pull a transitive that changes
# the program's bytecode hash, invalidating the audit. Per
# docs/MAINNET_CHECKLIST.md §1.1 #3.
anchor-lang = "=0.31.1"
anchor-spl = "=0.31.1"
# ADR-095: Depend on the registry crate for typed CPI. `features = ["cpi"]`
# enables Anchor-generated CPI helpers; the transitive `no-entrypoint` feature
# prevents the registry's cdylib entrypoint from colliding with this program's.
# Used to import `AgentProfile` and `AgentStatus` for the suspension check.
agent-registry = { path = "../agent-registry", features = ["cpi"], default-features = false }

[lib]
crate-type = ["cdylib", "lib"]

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# ADR-111: Allow downstream consumers (e.g. the `aep-fuzz` harness) to
# depend on `agent-vault` for its `state` types without linking a second
# BPF cdylib entrypoint. Mirrors the registry's feature surface; same
# pattern Settlement uses to depend on the registry as a CPI-only lib.
no-entrypoint = []
cpi = ["no-entrypoint"]

[dev-dependencies]
proptest = "1"

# ADR-115 Stage 2: inherit the workspace clippy / rustc lint allowlist.
[lints]
workspace = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
