[package]
name = "cctp-hook"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Reflex CCTP V2 Hook - post-mint Solana hook that auto-approves an AEP Settlement milestone after a Base->Solana CCTP V2 round-trip. Surface 3 of the AEP Reflex demo."

[dependencies]
# Pin Anchor versions exactly (=) for reproducible mainnet builds, matching
# the rest of the workspace (see programs/settlement/Cargo.toml).
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
anchor-spl = "=0.31.1"

# Surface 3 spec mandates "NOT modified" for `programs/agent-vault/`,
# `programs/agent-registry/`, `programs/settlement/`. Typed CPI would require
# adding a `cpi` Cargo feature to settlement (no source change, but a manifest
# edit). Instead we issue the CPI via raw `solana_program::instruction::Instruction`
# with the canonical Anchor 8-byte discriminator (sha256("global:approve_milestone")[..8])
# and a little-endian Borsh body. This keeps the Settlement on-disk binary
# unchanged.
#
# Q-S3-A: the Hook reads `agent_profile.cdp_wallet` from Registry to gate
# auto-approval. Pulling Registry in with `no-entrypoint` keeps Registry's
# binary untouched (its `entrypoint!` is suppressed for the dependent build
# only) while giving us the typed `AgentProfile` Borsh layout — far more
# robust than chasing a hand-computed offset through Vec<String> fields.
agent-registry = { path = "../agent-registry", features = ["no-entrypoint", "cpi"] }

[lib]
crate-type = ["cdylib", "lib"]
name = "cctp_hook"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

# C4-OB-01 / ADR-145 HARD DEPLOY GUARD.
#
# `auto_approve_milestone` releases escrowed funds. The current
# implementation does NOT verify the Circle CCTP V2 message /
# attestation / nonce on-chain — it trusts the dispatcher to have done
# so off-chain (see ADR-145, Proposed). Until that attestation
# verification lands, the instruction MUST NOT be reachable on any
# fund-bearing cluster.
#
# This feature is DEFAULT-OFF. Without it, every call to
# `auto_approve_milestone` reverts with `CctpAttestationNotVerified`
# *before* any state write or CPI. Enable it ONLY for a localnet /
# devnet integration build where the escrows hold no real value, and
# NEVER ship a mainnet/fund-bearing binary with it set until ADR-145's
# on-chain attestation source is implemented and this gate is replaced
# by the real verification.
cctp_attestation_verified = []

[dev-dependencies]
proptest = "1"

# ADR-115 Stage 2: inherit the workspace clippy / rustc lint allowlist.
[lints]
workspace = true

# Release profile is owned by the workspace root's `Cargo.toml` and tuned for
# minimum BPF binary size (Q-S3 spec target 5–10 KB). Per-package
# `[profile.*]` entries in workspace member crates are silently ignored by
# Cargo; declaring one here would only mislead a reader.
