[package]
name = "settlement"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
# Finding #17: Depend on the registry crate for typed CPI. `features = ["cpi"]`
# enables the Anchor-generated `cpi::update_reputation` helper; the transitive
# `no-entrypoint` feature prevents the registry's cdylib entrypoint from
# colliding with this program's when the settlement binary links it.
agent-registry = { path = "../agent-registry", features = ["cpi"], default-features = false }

[lib]
crate-type = ["cdylib", "lib"]
name = "settlement"

[dev-dependencies]
proptest = "1"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
