[package]
name = "settlement"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
# Finding #17 / AUD-001 / AUD-002: Depend on the registry crate for typed CPI.
# `features = ["cpi"]` enables the Anchor-generated `cpi::propose_reputation_delta`
# helper; the transitive `no-entrypoint` feature prevents the registry's cdylib
# entrypoint from colliding with this program's when the settlement binary
# links it.
agent-registry = { path = "../agent-registry", features = ["cpi"], default-features = false }

[lib]
crate-type = ["cdylib", "lib"]
name = "settlement"

[dev-dependencies]
proptest = "1"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
